[package]
name = "watch_later"
version = "0.1.0"
authors = ["Kimberly McCarty <mccartykim@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "2.0.0"
reqwest = { version = "0.10" features = ["blocking", "json"] }